<resources>
    <string name="app_name">Bitcoin Average App</string>
    <string name="action_settings">Settings</string>
    <string name="avg24h">Last 24h Average:</string>
    <string name="ask">Ask:</string>
    <string name="bid">Bid:</string>
    <string name="last">Last:</string>
    <string name="timestamp">Updated:</string>
    <string name="volume">Volume:</string>
    <string name="selectCurrencyCode">Select your currency: </string>
    <string name="googleAnalytics">UA-54524356-13</string>
</resources>
